[package]
name = "drg_mod_tools"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
repak = { git = "https://github.com/trumank/repak.git", features = ["oodle_implicit_dynamic"] }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
zip = { version = "0.6.6", default-features = false, features = [
  "aes-crypto",
  "deflate",
  "time",
] }
modio = { version = "0.7.2", features = ["rustls-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
regex = "1.8.3"
indicatif = "0.17.4"
futures-util = "0.3.28"
directories = "5.0.1"
rpassword = "7.2.0"
